# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_ext/netmanager_ext_config.gni")

config("net_tether_manager_config") {
  include_dirs = [
    "$UTILS_ROOT/native/base/include",
    "$UTILS_ROOT/system/safwk/native/include",
    "$THIRD_PARTY_ROOT/openssl/include",
    "$BASE_INNERKITS_ROOT/netshareclient/include",
    "$BASE_INNERKITS_ROOT/netshareclient/include/proxy",
    "$BASE_INNERKITS_ROOT/netshareclient/include/proxy/ipccallback",
    "$BASE_INNERKITS_ROOT/ethernetclient/include/proxy",
    "$BASE_INNERKITS_ROOT/netstatsclient/include",
    "$EXT_INNERKITS_ROOT/include",
    "$EXT_INNERKITS_ROOT/netshareclient/include",
    "$EXT_INNERKITS_ROOT/netshareclient/include/proxy",
    "$EXT_INNERKITS_ROOT/netshareclient/include/proxy/ipccallback",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETMANAGER_EXT_ROOT/utils/log/include",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/include",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/include/stub",
    "$NETWORKSHAREMANAGER_UTILS_DIR/event_report/include",
    "$BASE_INNERKITS_ROOT/include",
    "$BASE_INNERKITS_ROOT/netconnclient/include",
    "$BASE_INNERKITS_ROOT/netmanagernative/include",
    "$BASE_INNERKITS_ROOT/dnsresolverclient/include",
    "$NETSYSCONTROLLER_ROOT_DIR/include",
    "$BLUETOOTH_ROOT/interfaces/inner_api/include",
    "$NETMANAGER_BASE_ROOT/services/netmanagernative/include/netsys",
    "$NETMANAGER_BASE_ROOT/utils/common_utils/include",
    "$SAMGR_MANAGER_ROOT/interfaces/innerkits/samgr_proxy/include",
  ]
  if (communication_wifi_switch_enable) {
    include_dirs += [
      "$WIFI_MANAGER_ROOT/interfaces/kits/c",
      "$WIFI_MANAGER_ROOT/frameworks/native/interfaces",
    ]
  }
  if (usb_manager_enable) {
    include_dirs += [
      "$USB_MANAGER_ROOT/interfaces/innerkits/native/include",
      "$USB_MANAGER_ROOT/services/zidl/include",
      "$USB_MANAGER_ROOT/utils/native/include",
    ]
  }
}

ohos_shared_library("net_tether_manager") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    blocklist = "./cfi_blocklist.txt"
    debug = false
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "$NETWORKSHAREMANAGER_INNERKITS_SOURCE_DIR/src/proxy/ipccallback/sharing_event_callback_proxy.cpp",
    "$NETWORKSHAREMANAGER_INNERKITS_SOURCE_DIR/src/proxy/ipccallback/sharing_event_callback_stub.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_configuration.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_hisysevent.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_main_statemachine.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_service.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_sub_statemachine.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_tracker.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_upstreammonitor.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/router_advertisement_daemon.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/router_advertisement_params.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/stub/networkshare_service_stub.cpp",
  ]

  configs = [ ":net_tether_manager_config" ]

  deps = [ "$NETMANAGER_EXT_ROOT/utils:net_event_report" ]

  cflags = [
    "-fvisibility=hidden",
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
    "-fstack-protector-strong",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Os",
    "-fstack-protector-strong",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  ldflags = [
    "-Wl,--exclude-libs=ALL",
    "-Wl,--gc-sections",
  ]

  external_deps = [
    "c_utils:utils",
    "dhcp:dhcp_sdk",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "netmanager_base:net_data_share",
    "netmanager_base:net_manager_common",
    "netmanager_base:netsys_controller",
    "safwk:system_ability_fwk",
  ]

  defines = []

  if (communication_wifi_switch_enable) {
    defines += [ "WIFI_MODOULE" ]
    external_deps += [ "wifi:wifi_sdk" ]
  }

  if (usb_manager_enable) {
    defines += [ "USB_MODOULE" ]
    external_deps += [
      "drivers_interface_usb:usb_idl_headers",
      "usb_manager:usbsrv_client",
    ]
  }

  if (communication_bluetooth_switch_enable) {
    defines += [ "BLUETOOTH_MODOULE=1" ]
    external_deps += [ "bluetooth:btframework" ]
  }

  defines += [
    "NETMGR_LOG_TAG = \"NetworkShareManager\"",
    "LOG_DOMAIN = 0xD0015B0",
    "NETWORK_SHARING_CONFIG_PATH = \"/system/etc/communication/netmanager_ext/network_share_config.cfg\"",
  ]

  if (enable_netmgr_ext_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  external_deps += [ "hilog:libhilog" ]

  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

ohos_static_library("net_tether_manager_static") {
  testonly = true
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    blocklist = "./cfi_blocklist.txt"
    debug = false
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "$NETWORKSHAREMANAGER_INNERKITS_SOURCE_DIR/src/proxy/ipccallback/sharing_event_callback_proxy.cpp",
    "$NETWORKSHAREMANAGER_INNERKITS_SOURCE_DIR/src/proxy/ipccallback/sharing_event_callback_stub.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_configuration.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_hisysevent.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_main_statemachine.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_service.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_sub_statemachine.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_tracker.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/networkshare_upstreammonitor.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/router_advertisement_daemon.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/router_advertisement_params.cpp",
    "$NETWORKSHAREMANAGER_SOURCE_DIR/src/stub/networkshare_service_stub.cpp",
  ]

  configs = [ ":net_tether_manager_config" ]

  deps = [
    "$BASE_INNERKITS_ROOT/netconnclient:net_conn_manager_if",
    "$NETMANAGER_BASE_ROOT/utils:net_data_share",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "$NETMANAGER_EXT_ROOT/utils:net_event_report",
    "$NETSYSCONTROLLER_ROOT_DIR:netsys_controller",
  ]

  external_deps = [
    "c_utils:utils",
    "dhcp:dhcp_sdk",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  defines = []

  if (communication_wifi_switch_enable) {
    defines += [ "WIFI_MODOULE" ]
    external_deps += [ "wifi:wifi_sdk" ]
  }

  if (usb_manager_enable) {
    defines += [ "USB_MODOULE" ]
    external_deps += [
      "drivers_interface_usb:usb_idl_headers",
      "usb_manager:usbsrv_client",
    ]
  }

  if (communication_bluetooth_switch_enable) {
    defines += [ "BLUETOOTH_MODOULE=1" ]
    external_deps += [ "bluetooth:btframework" ]
  }

  defines += [
    "NETMGR_LOG_TAG = \"NetworkShareManager\"",
    "LOG_DOMAIN = 0xD0015B0",
    "NETWORK_SHARING_CONFIG_PATH = \"/system/etc/communication/netmanager_ext/network_share_config.cfg\"",
  ]

  if (enable_netmgr_ext_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  external_deps += [ "hilog:libhilog" ]

  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

## Install network_share_config.cfg to /system/etc/communication/netmanager_ext
ohos_prebuilt_etc("network_share_config") {
  source = "$NETMANAGER_EXT_ROOT/services/networksharemanager/network_share_config.cfg"
  install_enable = true
  relative_install_dir = "communication/netmanager_ext"
  part_name = "netmanager_ext"
}
