# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos/cli/ohos_cli_executable.gni")
import("//foundation/communication/netmanager_ext/netmanager_ext_config.gni")

ohos_cli_executable("ohos-networkShare") {
  cli_config_file = "ohos-networkShare.json"
  subsystem_name = "communication"
  part_name = "netmanager_ext"

  sources = [
    "src/main.cpp",
  ]

  include_dirs = [
    "$EXT_INNERKITS_ROOT/netshareclient/include",
    "$EXT_INNERKITS_ROOT/include",
  ]

  deps = [
    "$EXT_INNERKITS_ROOT/netshareclient:net_tether_manager_if",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "json:nlohmann_json_static",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetworkShareCLI\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  cflags_cc = common_cflags

  if (target_cpu == "arm") {
    cflags_cc += [ "-DBINDER_IPC_32BIT" ]
  }
}