# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_ext/netmanager_ext_config.gni")

ohos_ndk_library("libnet_trafficfilter") {
  output_name = "net_trafficfilter"
  output_extension = "so"
  ndk_description_file = "./libnet_trafficfilter.ndk.json"
  min_compact_version = "1"
  system_capability = "SystemCapability.Communication.NetManager.NetFirewall"
  system_capability_headers = [
    "network/netmanager_ext/net_trafficfilter.h",
    "network/netmanager_ext/net_trafficfilter_type.h",
  ]
}

ohos_ndk_headers("net_trafficfilter_header") {
  dest_dir = "$ndk_headers_out_dir/network/netmanager_ext"
  sources = [
    "$NETMANAGER_EXT_ROOT/interfaces/kits/c/net_trafficfilter/net_trafficfilter.h",
    "$NETMANAGER_EXT_ROOT/interfaces/kits/c/net_trafficfilter/net_trafficfilter_type.h",
  ]
}

ohos_shared_library("net_trafficfilter") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  output_extension = "so"

  include_dirs = [
    "$NETMANAGER_EXT_ROOT/interfaces/kits/c/net_trafficfilter",
  ]

  sources = [
    "$NETMANAGER_EXT_ROOT/frameworks/c/net_trafficfilter/src/net_trafficfilter.cpp",
    "$NETMANAGER_EXT_ROOT/frameworks/c/net_trafficfilter/src/net_trafficfilter_adapter.cpp",
  ]

  cflags = [
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  cflags_cc = [
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  deps = [
    "$EXT_INNERKITS_ROOT/netfirewallclient:netfirewall_manager_if",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "netmanager_base:net_manager_common",
    "netmanager_base:net_native_manager_if",
  ]

  part_name = "netmanager_ext"
  subsystem_name = "communication"
  relative_install_dir = "ndk"
}
