# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_ext/netmanager_ext_config.gni")

group("ani_package") {
  deps = []
  if (netmanager_ext_feature_net_firewall) {
    deps += [
      "netFirewall:netFirewall_ani",
      "netFirewall:netFirewall",
      "netFirewall:netFirewall_etc",
    ]
  }
  deps += [
    "mdns:mdns_ani",
    "mdns:mdns",
    "mdns:mdns_etc",
    "sharing:sharing_ani",
    "sharing:sharing",
    "sharing:sharing_etc",
    "vpn:vpn_ani",
    "vpn:vpn",
    "vpn:vpn_etc",
    "vpnextension:vpnextension_ani",
    "vpnextension:vpnextension",
    "vpnextension:vpnextension_etc",
    "vpnextensionability:vpnextensionability_etc",
  ]
}
